Changes from version 0.7.0-pre1 to 0.7.0-pre2
- Fixed the missing msvc makefiles in source distribution.
- Fixed some gcc 3.2 compilation fixes (MaHo)
- Updated MSVC makefiles for new examples and for Multi integration.
- Better Multi interface error handling.

Changes from version 0.6.1 to 0.7.0-pre1
- Added Multi interface

Changes from version 0.6.0 to 0.6.1
- automake-1.9 is now required for the AMD64 aclocal changes
- Some libcURL version check added for Infos.hpp 

Changes from version 0.6.0-pre5 to 0.6.0
- SList bug fixed.

Changes from version 0.6.0-pre4 to 0.6.0-pre5
- CookieList is no longer experimental code.
- Added example 12 (HTTP POST).
- Fixed example 11 binary file "bug".
- Added win32 examples's Makefile for VC++.
- Added README.win32.

Changes from version 0.6.0-pre3 to 0.6.0-pre4
- Added some patches for MS VC++ compiling. (Giuseppe "Cowo" Corbelli)
- Changed year of copyright
- Added examples 10 and 11

Changes from version 0.6.0-pre2 to 0.6.0-pre3
- Fixed the missing utilspp files in the source distribution.

Changes from version 0.6.0-pre1 to 0.6.0-pre2
- Fixed the missing files in the Makefile.am

Changes from version 0.5.2 to 0.6.0-pre1
- Added Functor feature.
- Removed the Easy::print function.
- Added GetInfo feature.
- Removed the cURL namespace.
- Updated the copyright year.
- Added the CURLOPT_COOKIELIST patch from Peter Krumins.
  This patch need to be enabled by the --enable-maintener.

Changes from version 0.5.1 to 0.5.2
- RPM fixes.
- Updated the documentation related to the exception safe feature.
- cURLpp::Options::PostFieldSize is now a long, and 
  cURLpp::Options::PostFieldSizeLarge is now a cURL::curl_off_t
  (thanks to Nicolas Le Goff)
- Now we can build with MinGW.
- Improved libcURL test.
- Added the BUILDING_CURLPP Define (DLL building). 

Changes from version 0.5.0 to 0.5.1
- cURLpp::Options::HttpGet and cURLpp::Options::CookieSession are now
  using bool values. (thanks to Peteris Krumins)
