@@ -11,14 +11,14 @@ configure.in is a good example to add curlpp to your project
  Example 08: verbose callback example, with exception safe handling.
  Example 09: verbose callback example, with exception safe handling, 
              but without raiseException function.
+ Example 10: Binded function functor for WriteFunction example.
  Example 11: Plain write function example.
+ Example 12: HTTP POST example.
  Example 13: Simple Multi interface example.
  Example 14: Multi interface example with info function example.
+ Example 15: Simple example for demonstrating the NoValueOptionTrait. 
+             (SslEngineDefault)
 
-** This example rely on a patch that will be available only
-** on version 7.14.1 of libcURL.
- Example 10: Binded function functor for WriteFunction example.
- Example 12: HTTP POST example.
 
 
 
